# lex-provenance-mcp

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: REPO-SETTINGS.md
.github/ISSUE_TEMPLATE/: commercial.yml  config.yml
.github/workflows/: tests.yml
adapters/claude/: README.md
adapters/cursor/: README.md
adapters/openai/: README.md
corpora/bbnj_high_seas/: README.md  sample_manifest.json  source_pointer.json
corpora/deep_seabed_mining/: README.md  sample_manifest.json  source_pointer.json
corpora/space_law/: README.md  sample_manifest.json  source_pointer.json
docs/: architecture.md  citation-model.md  commercial.md  corpus-boundaries.md  legal-disclaimer.md  security.md
examples/: cross_corpus_queries.md  sample_queries.md
mcp_server/: __init__.py  identity.py  registry.py  server.py  tools.py
mcp_server/schemas/: citation.schema.json  corpus.schema.json  document.schema.json
tests/: test_citation.py  test_read_only.py  test_registry.py  test_schemas.py
